# Neetworks

./: .gitignore  CMakeLists.txt  README.md
src/: activation.cpp  activation.hpp  containers.cpp  containers.hpp  cost.hpp  dataHandler.cpp  dataHandler.hpp  layer.cpp  layer.hpp  main.cpp  network.cpp  network.hpp  optimizer.hpp
src/activations/: relu.cpp  relu.hpp  sigmoid.cpp  sigmoid.hpp
src/containers/: containers.cpp  containers.hpp  matrix.cpp  matrix.hpp  tensor.cpp  tensor.hpp  tensor.tpp  vector.cpp  vector.hpp
src/costs/: crossEntropy.cpp  crossEntropy.hpp  meanSquaredError.cpp  meanSquaredError.hpp
src/layers/: denseLayer.cpp  denseLayer.hpp  inputLayer.cpp  inputLayer.hpp
src/optimizers/: momentum.cpp  momentum.hpp  sgd.cpp  sgd.hpp
